--- a/DaisyX/localization/es_ES.yaml
+++ b/DaisyX/localization/es_ES.yaml
@@ -169,8 +169,8 @@ STRINGS:
     btn_source: "📜 Código fuente"
     btn_help: "❔ Ayuda"
     btn_lang: "es Idioma"
-    btn_channel: "📡 Noticias de Daisy"
-    btn_group: "👥 Daisy Support"
+    btn_channel: "📡 Noticias de 𝑹𝒆𝒏𝒈𝒐𝒌𝒖 𝑺𝒂𝒏"
+    btn_group: "👥 𝑹𝒆𝒏𝒈𝒐𝒌𝒖 𝑺𝒂𝒏 Support"
     btn_group_help: "Click me for help!"
     back: Atrás
     #/help
