--- a/DaisyX/localization/es_ES.yaml
+++ b/DaisyX/localization/es_ES.yaml
@@ -164,8 +164,8 @@ STRINGS:
     cant_promote_yourself: "No puedes promoverte a ti mismo."
     emoji_not_allowed: "Lo siento, pero los roles de administrador no pueden contener emojis 😞"
   pm_menu:
-    start_hi_group: '¡Hola! Mi nombre es Sophie'
-    start_hi: "¡Hola! ¡Mi nombre es <b>Daisy</b>, te ayudo a gestionar tu grupo de una manera eficiente!"
+    start_hi_group: '¡Hola! Mi nombre es 𝑹𝒆𝒏𝒈𝒐𝒌𝒖 𝑺𝒂𝒏'
+    start_hi: "¡Hola! ¡Mi nombre es <b>𝑹𝒆𝒏𝒈𝒐𝒌𝒖 𝑺𝒂𝒏</b>, te ayudo a gestionar tu grupo de una manera eficiente!"
     btn_source: "📜 Código fuente"
     btn_help: "❔ Ayuda"
     btn_lang: "es Idioma"
@@ -174,7 +174,7 @@ STRINGS:
     btn_group_help: "Click me for help!"
     back: Atrás
     #/help
-    help_header: "¡Oye! Mi nombre es <b>Daisy</b>. Soy un robot de gestión de grupos, ¡estoy aquí para ayudarte a moverte y mantener el orden en tus grupos!\nTengo muchas funciones útiles, como control de flood, un sistema de advertencia, un sistema de notas e incluso respuestas predeterminadas a ciertas palabras clave."
+    help_header: "¡Oye! Mi nombre es <b>𝑹𝒆𝒏𝒈𝒐𝒌𝒖 𝑺𝒂𝒏</b>. Soy un robot de gestión de grupos, ¡estoy aquí para ayudarte a moverte y mantener el orden en tus grupos!\nTengo muchas funciones útiles, como control de flood, un sistema de advertencia, un sistema de notas e incluso respuestas predeterminadas a ciertas palabras clave."
     click_btn: Haz clic aquí
   disable:
     #/disableable
