--- a/DaisyX/localization/ar_SA.yaml
+++ b/DaisyX/localization/ar_SA.yaml
@@ -169,7 +169,7 @@ STRINGS:
     btn_source: "📦 Source code"
     btn_help: "مساعدة ❔"
     btn_lang: "اللغة 🇷🇺"
-    btn_channel: "📡 أخبار صوفي"
+    btn_channel: "📡 أخبار 𝑹𝒆𝒏𝒈𝒐𝒌𝒖 𝑺𝒂𝒏"
     btn_group_help: "Click me for help!"
     back: الرجوع
     #/help
