--- a/DaisyX/localization/en.yaml
+++ b/DaisyX/localization/en.yaml
@@ -187,14 +187,13 @@ STRINGS:
 
   pm_menu:
     start_hi_group: 'Hey there! My name is 𝑹𝒆𝒏𝒈𝒐𝒌𝒖 𝑺𝒂𝒏'
-    start_hi: "Hey there! My name is <b>Daisy.</b>\nI can help manage your groups with useful features, feel free to add me to your groups!"
+    start_hi: "Hey there! My name is <b>𝑹𝒆𝒏𝒈𝒐𝒌𝒖 𝑺𝒂𝒏.</b>\nI can help manage your groups with useful features, feel free to add me to your groups!"
     btn_source: "📜 Source code"
     btn_help: "❔ Help"
     btn_lang: "🇺🇸 Language"
     btn_channel: "🙋‍♀️ 𝑹𝒆𝒏𝒈𝒐𝒌𝒖 𝑺𝒂𝒏 News"
-    btn_group: "👥 𝑹𝒆𝒏𝒈𝒐𝒌𝒖 𝑺𝒂𝒏 Support"
     btn_group_help: "Click me for help!"
-    back: "🏃‍♂️ Back"
+    back: Back
 
     # /help
     help_header: "Hi Boss! I'm <b>𝑹𝒆𝒏𝒈𝒐𝒌𝒖 𝑺𝒂𝒏</b>. An anime themed super powerful group management bot with many handy tools. So why are you waiting. Let me to assist you"
@@ -746,16 +745,9 @@ STRINGS:
     configuration_info:with_time: Antiflood is configured in this chat, those who send {count} message within {time} will be {action}!
     configuration_info: Antiflood is configured in this chat, those who send {count} consecutively will be {action}!
     ban: banned
-    tmute: tmuted
-    tban: tbanned
     mute: muted
     kick: kicked
 
     # /setfloodaction
     invalid_args: "Unsupported action, expected {supported_actions}!"
     setfloodaction_success: "Successfully updated flood action to <b>{action}</b>!"
-    
-  afk:
-    is_afk: "{user} is AFK!\nReason: {reason}"
-    unafk: "{user} is not AFK anymore!"
-    afk_anon: "AFK mode cannot be used as an anonymous administrator."
